--- a/ents/wall.yaml
+++ b/ents/wall.yaml
@@ -8,7 +8,8 @@ components:
     -
         name: physical
         mass: 10
-        coll_shapes: null
+        coll_shapes: 
+            - [0,0,64,64]
         active_shape: 0
         num_shapes: 0
         velocity: 2
