--- a/ents/player.yaml
+++ b/ents/player.yaml
@@ -8,7 +8,8 @@ components:
             - [0,0,32,64]
         active_shape: 0
         num_shapes: 0
-        velocity: 2
+        velocity: 2.0
+        max_velocity: 2
         x: 50.0
         y: 50.0
         vx: 0.0
