function to add buttons and some other crap

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 cc = g++
-compiler_flags = -w -v
+compiler_flags = -w -v -Wall
 # linker_flags = -I include -L lib -l SDL2-2.0.0 -lSDL2_image -lSDL2_
 linker_flags = -I /usr/local/include -L /usr/local/lib -lSDL2 -lSDL2_image -lSDL2_ttf
 
